[gd_scene load_steps=7 format=3 uid="uid://64eei1p8gesh"]

[ext_resource type="Script" path="res://entities/keyboard/keyboard.gd" id="1_dvxcb"]
[ext_resource type="Script" path="res://main.gd" id="1_y13on"]
[ext_resource type="Texture2D" uid="uid://62ttoabqbby8" path="res://assets/sprites/badmousethinglol.png" id="3_045t6"]
[ext_resource type="Script" path="res://entities/mouse.gd" id="3_jvt7e"]
[ext_resource type="PackedScene" uid="uid://qyarq23gshw7" path="res://entities/keyboard/key-corrupt.tscn" id="4_mxdwa"]
[ext_resource type="PackedScene" uid="uid://cf01hxskdo157" path="res://entities/bind_presets/bind_presets.tscn" id="6_bpm17"]

[node name="Main" type="Control" groups=["Main"]]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_y13on")
metadata/_edit_lock_ = true

[node name="Keyboard" type="Control" parent="." groups=["Keyboard"]]
anchors_preset = 0
offset_right = 779.0
offset_bottom = 404.0
script = ExtResource("1_dvxcb")
metadata/_edit_lock_ = true

[node name="Mouse" type="Control" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -267.0
offset_bottom = 336.0
grow_horizontal = 0
script = ExtResource("3_jvt7e")

[node name="TextureRect" type="TextureRect" parent="Mouse"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_045t6")
expand_mode = 1
stretch_mode = 5

[node name="Keys" type="Control" parent="Mouse"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LeftClick" parent="Mouse/Keys" instance=ExtResource("4_mxdwa")]
layout_mode = 1
offset_left = 37.0
offset_top = 32.0
offset_right = 101.0
offset_bottom = 162.0
keycode = -1

[node name="RightClick" parent="Mouse/Keys" instance=ExtResource("4_mxdwa")]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -100.0
offset_top = 34.0
offset_right = -36.0
offset_bottom = 164.0
grow_horizontal = 0
keycode = -2

[node name="MiddleClick" parent="Mouse/Keys" instance=ExtResource("4_mxdwa")]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -32.0
offset_top = 65.0
offset_right = 32.0
offset_bottom = 129.0
grow_horizontal = 2
keycode = -3

[node name="Mouse4" parent="Mouse/Keys" instance=ExtResource("4_mxdwa")]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 37.0
offset_top = -141.0
offset_right = 101.0
offset_bottom = -77.0
grow_vertical = 0
keycode = -8

[node name="Mouse5" parent="Mouse/Keys" instance=ExtResource("4_mxdwa")]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 37.0
offset_top = -76.0
offset_right = 101.0
offset_bottom = -12.0
grow_vertical = 0
keycode = -9

[node name="Mwheelup" parent="Mouse/Keys" instance=ExtResource("4_mxdwa")]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -32.0
offset_right = 32.0
grow_horizontal = 2
keycode = -4

[node name="Mwheeldown" parent="Mouse/Keys" instance=ExtResource("4_mxdwa")]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -32.0
offset_top = 130.0
offset_right = 32.0
offset_bottom = 194.0
grow_horizontal = 2
keycode = -5

[node name="BindPresets" parent="." instance=ExtResource("6_bpm17")]
layout_mode = 1

[node name="KeyInfo" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -462.0
offset_top = -22.0
offset_right = -267.0
offset_bottom = 115.0
grow_horizontal = 0
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="KeyInfo"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_lock_ = true

[node name="Label" type="Label" parent="KeyInfo/VBoxContainer"]
layout_mode = 2
text_overrun_behavior = 3
metadata/_edit_lock_ = true

[node name="LineEdit" type="LineEdit" parent="KeyInfo/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
metadata/_edit_lock_ = true

[node name="SelectedBind" type="Control" parent="." groups=["SelectedBind"]]
anchors_preset = 0

[node name="SaveButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -31.0
offset_right = 109.0
grow_vertical = 0
text = "Save"

[node name="FileDialog" type="FileDialog" parent="SaveButton"]
title = "Save Config"
initial_position = 1
size = Vector2i(600, 400)
min_size = Vector2i(600, 400)
ok_button_text = "Save"
dialog_hide_on_ok = true
access = 2
filters = PackedStringArray(".vcfg", ".cfg")

[node name="VersionLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = -56.0
offset_right = 192.0
offset_bottom = -33.0
grow_vertical = 0
text = "VersionInfo"

[node name="FileDialog" type="FileDialog" parent="."]
title = "Open a File"
initial_position = 2
size = Vector2i(600, 425)
min_size = Vector2i(600, 400)
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray(".vcfg", ".cfg")

[node name="ExportDialog" type="ConfirmationDialog" parent="."]
title = "Exported to .vcfg!"
initial_position = 2
size = Vector2i(420, 400)
ok_button_text = "Close"
cancel_button_text = "Copy To Clipboard"

[node name="TextEdit" type="TextEdit" parent="ExportDialog"]
offset_left = 8.0
offset_top = 8.0
offset_right = 412.0
offset_bottom = 351.0
text = "config"
editable = false

[connection signal="text_submitted" from="KeyInfo/VBoxContainer/LineEdit" to="." method="change_selected_key_command"]
[connection signal="text_submitted" from="KeyInfo/VBoxContainer/LineEdit" to="KeyInfo/VBoxContainer/LineEdit" method="release_focus" unbinds=1]
[connection signal="pressed" from="SaveButton" to="." method="save_config"]
[connection signal="file_selected" from="SaveButton/FileDialog" to="." method="save_config"]
[connection signal="file_selected" from="FileDialog" to="." method="load_config"]
